cmake_minimum_required(VERSION 3.16)
if($ENV{TRAVIS_BUILD_NUMBER})
    project(async_timer VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
else()
    project(async_timer VERSION 0.0.1)
endif()
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(Settings)
message(STATUS "CMAKE_MODULE_PATH = $CMAKE_MODULE_PATH")

set(THREADS_PREFER_PTHREAD_FLAG ON)
add_subdirectory(src)
find_package(Threads REQUIRED)
find_package(GTest MODULE)
if(GTest_FOUND AND Threads_FOUND)
    enable_testing()
    add_subdirectory(tests)
else()
    message(STATUS "Gtest not found! Tests will not build.")
endif()